default/objects/E2E_Form_MZK_Settings__c/fields/Is_Common__c.field-meta.xml
<CustomField>
    <fullName>Is_Common__c</fullName>
    <label>Is Common</label>
    <type>TextArea</type>
</CustomField>