default/objects/E2E_Form_MZK_Settings__c/fields/Is_Ruble__c.field-meta.xml
<CustomField>
    <fullName>Is_Ruble__c</fullName>
    <label>Is Ruble</label>
    <type>TextArea</type>
</CustomField>