default/objects/E2E_Form_MZK_Settings__c/fields/Limit_Type_Ids__c.field-meta.xml
<CustomField>
    <fullName>Limit_Type_Ids__c</fullName>
    <label>Limit Type Ids</label>
    <type>TextArea</type>
</CustomField>