default/objects/E2E_Form_MZK_Settings__c/fields/Limit_Values__c.field-meta.xml
<CustomField>
    <fullName>Limit_Values__c</fullName>
    <description>limits for services (splitted by &#39;&#39;;&quot;)</description>
    <label>Limit Values</label>
    <type>TextArea</type>
</CustomField>