default/objects/E2E_Form_MZK_Settings__c/fields/Log_User__c.field-meta.xml
<CustomField>
    <fullName>Log_User__c</fullName>
    <label>Log User</label>
    <type>TextArea</type>
</CustomField>