default/objects/E2E_Form_MZK_Settings__c/fields/Send_Type__c.field-meta.xml
<CustomField>
    <fullName>Send_Type__c</fullName>
    <label>Send Type</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>