default/objects/E2E_Form_MZK_Settings__c/fields/Service_Groups__c.field-meta.xml
<CustomField>
    <fullName>Service_Groups__c</fullName>
    <label>Service Groups</label>
    <type>TextArea</type>
</CustomField>