default/objects/E2E_Form_MZK_Settings__c/fields/Service_Ids__c.field-meta.xml
<CustomField>
    <fullName>Service_Ids__c</fullName>
    <description>Service identifiers splitted by &quot;;&quot;</description>
    <label>Service Ids</label>
    <type>TextArea</type>
</CustomField>