default/objects/E2E_Form_MZK_Settings__c/fields/Total_Limit_Type__c.field-meta.xml
<CustomField>
    <fullName>Total_Limit_Type__c</fullName>
    <label>Total Limit Type</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>