default/objects/E2E_Form_MZK_Settings__c/fields/Total_Limit_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Limit_Value__c</fullName>
    <label>Total Limit Value</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>